tests/rosetta/out/Zig/100-doors-3.error
zig build: exit status 1
/tmp/100-doors-3.zig:5:67: error: use of undeclared identifier 'handleError'
